feat: update allowed origins and add access token handling in payment form

--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,9 @@
     <h1>Course Payment</h1>
     
     <form id="payment-form">
+      <!-- send the access token -->
+      <input type="text" id="access-token" value="your_access_token_here">
+
       <div class="form-group">
         <label for="course">Select Course</label>
         <select id="course" required>
